switch from log4j to slf4j with logback