@@ -2,12 +2,10 @@ package de.applejuicenet.client.gui;
 
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
-import de.applejuicenet.client.fassade.shared.ProxySettings;
 import de.applejuicenet.client.fassade.shared.WebsiteContentLoader;
 import de.applejuicenet.client.gui.controller.OptionsManagerImpl;
-import de.applejuicenet.client.gui.controller.ProxyManagerImpl;
-import org.apache.log4j.Level;
-import org.apache.log4j.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.swing.*;
 import java.util.Arrays;
@@ -16,27 +14,22 @@ import java.util.stream.Collectors;
 
 public class VersionChecker {
 
-    private static final Logger logger = Logger.getLogger(AppleJuiceDialog.class);
+    private static final Logger logger = LoggerFactory.getLogger(VersionChecker.class);
 
     public static void check() {
-        Thread versionWorker = new Thread() {
+        Thread versionWorker = new Thread("VersionChecker") {
             public void run() {
-                if (logger.isEnabledFor(Level.DEBUG)) {
-                    logger.debug("VersionWorkerThread gestartet. " + this);
-                }
+                logger.debug("VersionWorkerThread gestartet. " + this);
 
                 try {
-                    ProxySettings proxy = ProxyManagerImpl.getInstance().getProxySettings();
                     String updateServer = OptionsManagerImpl.getInstance().getUpdateServerURL();
-                    String downloadData = WebsiteContentLoader.getWebsiteContent(updateServer, proxy);
+                    String downloadData = WebsiteContentLoader.getWebsiteContent(updateServer);
 
                     if (downloadData.length() > 0) {
-                        JsonObject jsonObject = new JsonParser().parse(downloadData).getAsJsonObject();
+                        JsonObject jsonObject = JsonParser.parseString(downloadData).getAsJsonObject();
                         String aktuellsteVersion = jsonObject.get("tag_name").getAsString();
 
-                        if (logger.isEnabledFor(Level.INFO)) {
-                            logger.info("letzte veröffentlichte Version: " + aktuellsteVersion);
-                        }
+                        logger.info("aktuelle Version " + AppleJuiceDialog.getVersion() + " | letzte veröffentlichte Version: " + aktuellsteVersion);
 
                         if (compareVersion(aktuellsteVersion, AppleJuiceDialog.getVersion()) == 1) {
                             String releaseLink = jsonObject.get("html_url").getAsString();
@@ -44,22 +37,14 @@ public class VersionChecker {
                                 UpdateInformationDialog updateInformationDialog = new UpdateInformationDialog(AppleJuiceDialog.getApp(), aktuellsteVersion, releaseLink);
                                 updateInformationDialog.setVisible(true);
                             });
-                        } else {
-                            if (logger.isEnabledFor(Level.INFO)) {
-                                logger.info("aktuelle Version " + AppleJuiceDialog.getVersion() + " | letzte veröffentlichte Version: " + aktuellsteVersion);
-                            }
                         }
 
                     }
                 } catch (Exception e) {
-                    if (logger.isEnabledFor(Level.INFO)) {
-                        logger.info("Aktualisierungsinformationen konnten nicht geladen werden.");
-                    }
+                    logger.info("Aktualisierungsinformationen konnten nicht geladen werden.", e);
                 }
 
-                if (logger.isEnabledFor(Level.DEBUG)) {
-                    logger.debug("VersionWorkerThread beendet. " + this);
-                }
+                logger.debug("VersionWorkerThread beendet. " + this);
             }
         };
 
@@ -79,7 +64,7 @@ public class VersionChecker {
         while (i < len1 && i < len2) {
             if (strList1.get(i).length() > strList2.get(i).length()) return 1;
             if (strList1.get(i).length() < strList2.get(i).length()) return -1;
-            int result = new Long(strList1.get(i)).compareTo(new Long(strList2.get(i)));
+            int result = Long.valueOf(strList1.get(i)).compareTo(Long.valueOf(strList2.get(i)));
             if (result != 0) return result;
             i++;
         }
